Add access token api class
